--- a/kaamhai-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/kaamhai-webapp/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,20 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
+
+
+
+	<!-- CORS filter -->
+
+	<filter>
+		<filter-name>cors-filter</filter-name>
+		<filter-class>
+			org.kaamhai.util.SimpleCORSFilter
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>cors-filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
